add: inter-vlan routing for camaraX
- Se ha añadido el inter-vlan routing para todas las camaras.
- También soporta redundancia, si se cae un spine todo el tráfico se redirige por el otro spine.

--- a/configs/switch-leaf1.partial.conf
+++ b/configs/switch-leaf1.partial.conf
@@ -1,19 +1,29 @@
-vlan 20
-name CAMERAS
-
+udld enable
+!
+spanning-tree mode rapid-pvst
+!
+mac address-table aging-time 5
+!
+vlan 21
+ name CAM_Leaf1
+!
 int e0/1
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 21
+ spanning-tree portfast trunk
+!
 int e0/2
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 21
+ spanning-tree portfast trunk
+!
 int e1/3
-sw mode access
-sw access vlan 20
-
+ sw mode access
+ sw access vlan 21
+!
 end
 write memory
