--- a/configs/switch-leaf2.partial.conf
+++ b/configs/switch-leaf2.partial.conf
@@ -1,22 +1,33 @@
-vlan 20
-name CAMERAS
-
+udld enable
+!
+spanning-tree mode rapid-pvst
+!
+mac address-table aging-time 5
+!
+vlan 22
+ name CAM_Leaf2
+!
 int e0/1
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 22
+ spanning-tree portfast trunk
+!
 int e0/2
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 22
+ spanning-tree portfast trunk
+!
 int e1/1
-sw mode access
-sw access vlan 20
+ sw mode access
+ sw access vlan 22
+!
 int e1/2
-sw mode access
-sw access vlan 20
-
+ sw mode access
+ sw access vlan 22
+!
 end
 write memory
