--- a/configs/switch-leaf3.partial.conf
+++ b/configs/switch-leaf3.partial.conf
@@ -1,19 +1,29 @@
-vlan 20
-name CAMERAS
-
+udld enable
+!
+spanning-tree mode rapid-pvst
+!
+mac address-table aging-time 5
+!
+vlan 23
+ name CAM_Leaf3
+!
 int e0/1
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 23
+ spanning-tree portfast trunk
+!
 int e0/2
-sw trunk encapsulation dot1q
-sw mode trunk
-sw trunk allowed vlan 20
-
+ udld port aggressive
+ sw trunk encapsulation dot1q
+ sw mode trunk
+ sw trunk allowed vlan 23
+ spanning-tree portfast trunk
+!
 int e0/3
-sw mode access
-sw access vlan 20
-
+ sw mode access
+ sw access vlan 23
+!
 end
 write memory
