--- a/configs/router-spine2.partial.conf
+++ b/configs/router-spine2.partial.conf
@@ -1,21 +1,65 @@
+ip routing
+! Uplinks a leaf1–leaf4
 int e0/1
-no ip addr
+ no ip addr
+ no shutdown
 int e0/2
-no ip addr
-
-int e0/1.20
-encapsulation dot1q 20
-ip addr 10.0.20.3 255.255.255.0
-standby 20 ip 10.0.20.1
-standby 20 priority 100
-standby 20 preempt
-
-int e0/2.20
-encapsulation dot1q 20
-ip addr 10.0.20.5 255.255.255.0
-standby 20 ip 10.0.20.1
-standby 20 priority 100
-standby 20 preempt
-
+ no ip addr
+ no shutdown
+int e0/3
+ no ip addr
+ no shutdown
+int e1/1
+ no ip addr
+ no shutdown
+!
+! VLAN 21 → leaf1
+int e0/1.21
+ encapsulation dot1q 21
+ ip addr 10.0.21.2 255.255.255.0
+ standby 21 ip 10.0.21.254
+ standby 21 priority 100
+ standby 21 preempt
+ standby 21 timers 1 3
+ standby 21 use-bia
+ standby 21 track e0/1 20
+ no shutdown
+!
+! VLAN 22 → leaf2
+int e0/2.22
+ encapsulation dot1q 22
+ ip addr 10.0.22.2 255.255.255.0
+ standby 22 ip 10.0.22.254
+ standby 22 priority 100
+ standby 22 preempt
+ standby 22 timers 1 3
+ standby 22 use-bia
+ standby 22 track e0/2 20
+ no shutdown
+!
+! VLAN 23 → leaf3
+int e0/3.23
+ encapsulation dot1q 23
+ ip addr 10.0.23.2 255.255.255.0
+ standby 23 ip 10.0.23.254
+ standby 23 priority 100
+ standby 23 preempt
+ standby 23 timers 1 3
+ standby 23 use-bia
+ standby 23 track e0/3 20
+ no shutdown
+!
+! VLAN 24 → leaf4
+int e1/1.24
+ encapsulation dot1q 24
+ ip addr 10.0.24.2 255.255.255.0
+ standby 24 ip 10.0.24.254
+ standby 24 priority 100
+ standby 24 preempt
+ standby 24 timers 1 3
+ standby 24 use-bia
+ standby 24 track e1/1 20
+ no shutdown
+!
 end
 write memory
